<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/nav_login"
            android:title="@string/立即登入"/>
    <group android:checkableBehavior="none" android:id="@+id/group1">
        <item
            android:id="@+id/nav_about"
            android:title="@string/關於我們"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/常見問題"/>
    </group>
    <group android:checkableBehavior="none" android:id="@+id/group2">
        <item
            android:id="@+id/nav_service"
            android:title="服務條款"/>
        <item
            android:id="@+id/nav_privacy"
            android:title="私隱政策"/>
    </group>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/登出"/>
</menu>