<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/add_record_icon"
        app:maxImageSize="32dp"
        android:backgroundTint="#FFFFFF"
        app:backgroundTint="@color/blue_100"
        app:borderWidth="2dp"

        android:layout_margin="16dp"/>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FindFragment"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/linearLayout1"
        app:layout_constraintBottom_toTopOf="@+id/navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_layout"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/saved_star"
                android:layout_margin="20dp"
                android:contentDescription="@string/saved_star_icon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="30sp"
                android:text="@string/登入儲存你的常用熱線聯絡"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/switch_to_user_button"
                android:layout_marginTop="20dp"
                android:text="@string/立即登入"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout_layout"
            android:orientation="vertical"
            android:visibility="visible">
            <RadioGroup
                android:checkedButton="@+id/view_online_button"
                android:id="@+id/toggle_radio_group"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/pink_out_line"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:id="@+id/view_online_button"
                    android:background="@drawable/toggle_widget_background"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="線上儲存"
                    android:textColor="@drawable/toggle_widget_text" />

                <RadioButton
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/view_local_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="本地儲存"
                    android:textColor="@drawable/toggle_widget_text" />
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/我的記錄"
                android:layout_margin="10dp"/>
            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:text="@string/暫無紀錄"
                        android:id="@+id/no_record_text"
                        android:textAlignment="center"
                        android:padding="10dp"
                        android:visibility="gone"/>
    <!--            <ListView-->
    <!--                style="android.R.layout.simple_list_item_2"-->
    <!--                android:id="@+id/online_saved_view_list"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="0dp"-->
    <!--                android:layout_weight="1"/>-->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layoutAnimation="@anim/layout_animation_fall_down" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/addedRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone"
                        android:layoutAnimation="@anim/layout_animation_fall_down" />
            </FrameLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>